[gd_scene load_steps=18 format=3 uid="uid://b4smae2p8wcx6"]

[ext_resource type="Texture2D" uid="uid://bos5o3mfpwn0h" path="res://assets/miniGame/game1/creeper/creeper6.png" id="1_vc2d1"]
[ext_resource type="Texture2D" uid="uid://de3yjt8ks1xpo" path="res://assets/miniGame/game1/creeper/creeper7.png" id="2_kp1uj"]
[ext_resource type="Texture2D" uid="uid://caq6o2s1uewqb" path="res://assets/miniGame/game1/creeper/creeper8.png" id="3_j1u0x"]
[ext_resource type="Texture2D" uid="uid://ccbvlrlco4ffc" path="res://assets/miniGame/game1/creeper/creeper2.png" id="4_kqjbq"]
[ext_resource type="Texture2D" uid="uid://duhk4hs2mtjnq" path="res://assets/miniGame/game1/creeper/creeper3.png" id="5_j6tni"]
[ext_resource type="Texture2D" uid="uid://fx4mhehdnc15" path="res://assets/miniGame/game1/creeper/creeper4.png" id="6_wh73l"]
[ext_resource type="Texture2D" uid="uid://cibbw5x1bo5te" path="res://assets/miniGame/game1/creeper/creeper5.png" id="7_oveb1"]
[ext_resource type="Texture2D" uid="uid://ckfag6m2jg6f1" path="res://assets/miniGame/game1/creeper/creeper1.png" id="8_v6kpx"]
[ext_resource type="Script" path="res://script/miniGame/game1Tbale.gd" id="9_aw7si"]
[ext_resource type="Texture2D" uid="uid://dby22qk3728hy" path="res://assets/miniGame/game1/gunpowder/gunpowder3.png" id="9_vyc1w"]
[ext_resource type="Texture2D" uid="uid://btcsnqkuapbhm" path="res://assets/miniGame/game1/gunpowder/gunpowder2.png" id="10_b6721"]
[ext_resource type="Texture2D" uid="uid://7f4yf11eax14" path="res://assets/miniGame/game1/gunpowder/gunpowder1.png" id="11_uabhj"]
[ext_resource type="AudioStream" uid="uid://dl4ahlbm2v8y5" path="res://assets/music/se/miniGame/pop.ogg" id="13_pfn15"]
[ext_resource type="AudioStream" uid="uid://cw0yg4s3y7uyg" path="res://assets/music/se/miniGame/orb.ogg" id="14_ctfen"]
[ext_resource type="Texture2D" uid="uid://dw646fwfmdxyh" path="res://assets/particles/miniGame.png" id="14_lhpef"]

[sub_resource type="SpriteFrames" id="SpriteFrames_swpjy"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vc2d1")
}, {
"duration": 1.0,
"texture": ExtResource("2_kp1uj")
}, {
"duration": 1.0,
"texture": ExtResource("3_j1u0x")
}, {
"duration": 1.0,
"texture": ExtResource("8_v6kpx")
}],
"loop": false,
"name": &"creeperDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_wh73l")
}, {
"duration": 1.0,
"texture": ExtResource("5_j6tni")
}, {
"duration": 1.0,
"texture": ExtResource("4_kqjbq")
}, {
"duration": 1.0,
"texture": ExtResource("8_v6kpx")
}],
"loop": false,
"name": &"creeperOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_kqjbq")
}, {
"duration": 1.0,
"texture": ExtResource("5_j6tni")
}, {
"duration": 1.0,
"texture": ExtResource("6_wh73l")
}, {
"duration": 1.0,
"texture": ExtResource("7_oveb1")
}],
"loop": false,
"name": &"creeperShow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_v6kpx")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_v6kpx")
}],
"loop": false,
"name": &"powderDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_vyc1w")
}, {
"duration": 1.0,
"texture": ExtResource("10_b6721")
}, {
"duration": 1.0,
"texture": ExtResource("11_uabhj")
}, {
"duration": 1.0,
"texture": ExtResource("8_v6kpx")
}],
"loop": false,
"name": &"powderOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_uabhj")
}, {
"duration": 1.0,
"texture": ExtResource("10_b6721")
}, {
"duration": 1.0,
"texture": ExtResource("9_vyc1w")
}],
"loop": false,
"name": &"powderShow",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pc4yv"]
size = Vector2(20, 28)

[node name="game1Tbale" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_swpjy")
speed_scale = 1.2
script = ExtResource("9_aw7si")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_pc4yv")

[node name="moveTimer" type="Timer" parent="."]
one_shot = true

[node name="holdTimer" type="Timer" parent="."]
one_shot = true

[node name="normal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_pfn15")

[node name="well" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_ctfen")

[node name="clickNormal" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.1
one_shot = true
explosiveness = 1.0
texture = ExtResource("14_lhpef")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 300.0
scale_amount_min = 0.8
scale_amount_max = 0.8

[node name="clickWell" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.1
one_shot = true
explosiveness = 1.0
texture = ExtResource("14_lhpef")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 300.0
scale_amount_min = 0.8
scale_amount_max = 0.8
color = Color(1, 1, 0, 1)

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="moveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="holdTimer" to="." method="_on_hold_timer_timeout"]
